# test_cluster

./: .gitignore  .python-version  README.md  hello.py  main.py  pyproject.toml  test.ipynb
lib/: configTensorFlow.py  consts.py  delaySpreadNTNTDL.py  delaySpreadNtnTdlData.py  getScenariosParams.py  testDevices.py  utils.py
lib/sionna_ext/: TDL_NTN.py  setNTNParamsTDL.py
lib/sionna_ext/models/: TDL-A.json  TDL-B.json  TDL-C.json  TDL-D.json
