[project]
name = "uv-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=1.26.0",
    "pyqt5>=5.15.11",
    "setuptools>=75.8.0",
    "sionna>=0.19.0",
    "tensorflow[and-cuda]>=2.15.1",
]
